--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,7 +18,7 @@ spring:
   docker:
     compose:
       enabled: false
-      file: docker-compose.yaml
+      file: compose.yaml
 logging:
   file:
     name: another-adventure.log
